k8s-nginx-example/e2e-deploy2.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo2
spec:
  replicas: 2
  selector:
    matchLabels:
      app: demo2
  template:
    metadata:
      labels:
        app: demo2
    spec:
      containers:
      - name: http-echo
        image: us-docker.pkg.dev/google-samples/containers/gke/hello-app:1.0
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: demo-svc2
spec:
  ports:
    - port: 800
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
   app: demo2
