k8s-nginx-example/e2e-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: e2e-ingress
  annotations:
     kubernetes.io/ingress.class: "nginx"
     nginx.ingress.kubernetes.io/rewrite-target: /
spec:
 - hosts:
       - test.test.com
   rules:
   - http:
       paths:
       - path: /v1
         backend:
          service:
            name: demo-svc1
            port:
              number: 80
       - path: /v2
         backend:
           service:
             name: demo-svc2
             port:
               number: 800
